fix:Paciente se agrega

--- a/app/templates/archivo_clinico/listar.html
+++ b/app/templates/archivo_clinico/listar.html
@@ -20,8 +20,8 @@
             class="btn btn-sm btn-outline-secondary" title="Pacientes sin Expediente">
             <i class="bi bi-folder-x"></i> Pacientes sin Expediente
             </a>
-            <a href="{{ url_for('paciente.listar_pacientes') }}" class="btn btn-sm btn-outline-info" title="Unidad médica">
-              <i class="bi bi-hospital"></i>Unidad médica
+            <a href="{{ url_for('paciente.reporte_condicion') }}" class="btn btn-sm btn-outline-info" title="Unidad médica">
+              <i class="bi bi-hospital"></i>Paciente segun Condición
             </a>
           </div>
         </td>
