--- a/app/templates/recetas/listar_salidas.html
+++ b/app/templates/recetas/listar_salidas.html
@@ -16,6 +16,8 @@
 <div class="d-flex justify-content-between align-items-center mb-4">
   <h2>Salidas de Farmacia a Pacientes</h2>
 <a href="{{ url_for('farmacia.index') }}" class="btn btn-secondary">Regresar</a>
+<a href="{{ url_for('recetas.recetas_pendientes') }}" class="btn btn-secondary">Recetas Pendientes</a>
+
 </div>
 
 <table class="table table-bordered table-hover text-center">
