--- a/app/templates/recetas/detalle_receta.html
+++ b/app/templates/recetas/detalle_receta.html
@@ -18,17 +18,24 @@
   <h2>Recetas Médicas</h2>
   <div>
     {% if receta %}
+    
+
+      {% if current_user.rol.nombre_rol == 'USUARIOMEDICO' %}
       <!-- Botón: editar receta -->
       <a href="{{ url_for('recetas.editar_receta', id_receta=receta.id_receta) }}" 
          class="btn btn-sm btn-outline-warning me-2">
          <i class="bi bi-pencil-square"></i> Editar Receta
       </a>
-
-      <!-- Botón: regresar a la nota -->
-      <a href="{{ url_for('medicos.ver_nota', id_nota=receta.nota_id ) }}"
-         class="btn btn-sm btn-outline-secondary">
-         <i class="bi bi-arrow-return-left"></i> Regresar a la nota
-      </a>
+    <a href="{{ url_for('medicos.ver_nota', id_nota=receta.nota_id) }}"
+       class="btn btn-sm btn-outline-secondary">
+       <i class="bi bi-arrow-return-left"></i> Regresar a la nota
+    </a>
+{% elif current_user.rol.nombre_rol == 'UsuarioAdministrativo' %}
+    <a href="{{ url_for('recetas.listar_salidas') }}"
+       class="btn btn-sm btn-outline-secondary">
+       <i class="bi bi-arrow-return-left"></i> Regresar a salidas
+    </a>
+{% endif %}
     {% endif %}
   </div>
 </div>
