Fix: se mejor enfermeria , archivo clinico

--- a/app/templates/admin/admin.html
+++ b/app/templates/admin/admin.html
@@ -28,6 +28,7 @@
         <a class="btn" href="{{ url_for('admin.lista_usuarios') }}">Administrar Usuarios</a>
         <a class="btn" href="{{ url_for('formatos.formatos') }}">Ver / Cargar Formatos</a>
         <a class="btn" href="{{ url_for('control_mac.listar_macs') }}">Registrar un Direccion mac</a>
+        <a class="btn" href="{{ url_for('certificado.listar_folios') }}">Lista de Folios</a>
     </div>
 {% endblock %}
 </body>
