--- a/app/templates/main/home.html
+++ b/app/templates/main/home.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 
+
 {% block content %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-success px-3">
   <a class="navbar-brand d-flex align-items-center" href="#">
@@ -64,26 +65,27 @@
 </div>
   <h4 class="text-center text-maroon">Publicaciones Recientes</h4>
 <!-- Facebook Timeline -->
-<div class="container mt-5">
-
-  <div class="d-flex justify-content-center mt-3">
-    <div class="fb-page w-100"
-         data-href="https://www.facebook.com/CSSA.BELISARIODOMINGUEZ"
-         data-tabs="timeline"
-         data-width="1200"
-         data-height="500"
-         data-small-header="false"
-         data-adapt-container-width="true"
-         data-hide-cover="false"
-         data-show-facepile="true">
-      <blockquote cite="https://www.facebook.com/CSSA.BELISARIODOMINGUEZ" class="fb-xfbml-parse-ignore">
-        <a href="https://www.facebook.com/CSSA.BELISARIODOMINGUEZ">CESSA Belisario Domínguez</a>
-      </blockquote>
-      
+<div class="container text-center mt-4">
+  <div class="d-flex justify-content-center">
+    <div style="max-width: 2000px; width: 100%;">
+      <div class="fb-page"
+           data-href="https://www.facebook.com/CSSA.BELISARIODOMINGUEZ"
+           data-tabs="timeline"
+           data-width="2400"
+           data-height="600"
+           data-small-header="false"
+           data-adapt-container-width="false"
+           data-hide-cover="false"
+           data-show-facepile="true">
+        <blockquote cite="https://www.facebook.com/CSSA.BELISARIODOMINGUEZ" class="fb-xfbml-parse-ignore">
+          <a href="https://www.facebook.com/CSSA.BELISARIODOMINGUEZ">CESSA Belisario Domínguez</a>
+        </blockquote>
+      </div>
     </div>
   </div>
 </div>
 
+  
 
 <!-- Menú de Módulos -->
 <div class="container mt-5">
